<resources>
    <string name="app_name">Recetas</string>

    <!-- Strings para el LoginActivity -->
    <string name="email">Correo electrónico</string>
    <string name="passwd">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="signin">REGISTRARSE</string>

    <string name="title_activity_main">MainActivity</string>

    <!-- String para el MainActivity -->
    <string name="mFiltro">Filtrar</string>
    <string name="receta">Recetas</string>
    <string name="ubicacion">Cocineros</string>
    <string name="perfil">Perfil</string>

    <!-- String para el RegisterActivity -->
    <string name="regUsuario">Usuario</string>
    <string name="regPassword">Contraseña</string>
    <string name="regNombre">Nombre</string>
    <string name="regApellidos">Apellidos</string>
    <string name="regFecha">Fecha de nacimiento</string>
    <string name="regEmail">Correo electrónico</string>
    <string name="regTelefono">Teléfono móvil</string>
    <string name="btnSave">Guardar</string>

    <!-- String para el FragmentPerfil -->
    <string name="configuracion">Configuración de la cuenta</string>
    <string name="cmbPass">Cambiar contraseña</string>
    <string name="cmbDatos">Cambiar mis datos</string>

    <!-- String para modificar contraseña -->
    <string name="oldPass">Antigua contraseña</string>
    <string name="newPass">Nueva contraseña</string>
    <string name="newPass2">Repite nueva contraseña</string>
    <string name="btnModificar">Modificar</string>

    <!-- String para filtrar recetas -->
    <string name="recPrincipal">Plato principal</string>
    <string name="recPostre">Postre</string>
    <string name="btnAceptar">Aceptar</string>

    <!-- String para recetas -->
    <string name="recDificultad">Dificultad</string>

</resources>
