<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".actividades.RegisterActivity">

    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:padding="20dp"
        android:orientation="vertical"
        android:background="@drawable/redondeo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorBtnPulsado"
            android:fontFamily="@font/karla" >

            <EditText
                android:id="@+id/edtUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/campos"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/regUsuario"
                android:inputType="textPersonName"
                android:fontFamily="@font/karla" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorBtnPulsado"
            android:fontFamily="@font/karla" >

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/campos"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/regPassword"
                android:inputType="textPassword"
                android:fontFamily="@font/karla" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorBtnPulsado"
            android:fontFamily="@font/karla" >

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/campos"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/regNombre"
                android:inputType="textPersonName"
                android:fontFamily="@font/karla" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorBtnPulsado"
            android:fontFamily="@font/karla" >

            <EditText
                android:id="@+id/edtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/campos"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/regApellidos"
                android:inputType="textPersonName"
                android:fontFamily="@font/karla" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorBtnPulsado"
            android:fontFamily="@font/karla" >

            <EditText
                android:id="@+id/edtFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/campos"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/regFecha"
                android:inputType="date"
                android:fontFamily="@font/karla" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorBtnPulsado"
            android:fontFamily="@font/karla" >

            <EditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/campos"
                android:ems="10"
                android:hint="@string/regEmail"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/karla" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorBtnPulsado"
            android:fontFamily="@font/karla" >

            <EditText
                android:id="@+id/edtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/campos"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/regTelefono"
                android:inputType="phone"
                android:fontFamily="@font/karla"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/botones"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:fontFamily="@font/karla" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>